--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@duckodas/badwords",
-  "version": "3.0.6",
+  "version": "1.0.0",
   "description": "A javascript filter for bad words",
   "main": "./lib/badwords",
   "directories": {
@@ -25,11 +25,11 @@
   },
   "devDependencies": {
     "better-assert": "1.0.0",
-    "documentation": "^5.3.3",
-    "mocha": "^5.2.0"
+    "documentation": "^14.0.1",
+    "mocha": "^10.2.0"
   },
   "author": "Mike P.",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "engines": {
     "node": ">=8.0.0"
   }
